--- a/Week10/DATA620_DocClassification.ipynb
+++ b/Week10/DATA620_DocClassification.ipynb
@@ -14,15 +14,23 @@
    "outputs": [],
    "source": [
     "import nltk\n",
-    "import pandas as pd\n",
-    "from os import listdir\n",
-    "from os.path import isfile, join\n",
-    "import nltk\n",
     "from nltk.tokenize import RegexpTokenizer\n",
     "from nltk.stem import WordNetLemmatizer,PorterStemmer\n",
     "from nltk.corpus import stopwords\n",
-    "import re\n",
+    "\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "from os import listdir\n",
+    "from os.path import isfile, join\n",
+    "import re\n",
+    "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn import metrics\n",
+    "\n",
     "\n",
     "lemmatizer = WordNetLemmatizer()\n",
     "stemmer = PorterStemmer() "
@@ -43,6 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "'''\n",
+    "#here we preprocess the data - commented out to save on run-time.\n",
     "\n",
     "PATH = \"C:/Users/Paul/OneDrive - CUNY School of Professional Studies/CUNY/DATA 620/Week10/\"\n",
     "spam_folders = ['easy_ham/','spam/','easy_ham_2/','hard_ham/','spam_2/']\n",
@@ -66,7 +77,13 @@
     "#encode the spam as spam\n",
     "df['isSpam'][(df['source'] == 'spam/') | (df['source'] == 'spam_2/')] = 1   \n",
     "\n",
-    "#df.to_csv(\"spam_n_ham.csv\",sep='|')\n"
+    "#df.to_csv(\"spam_n_ham.csv\",sep='|')\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "#load the preprocessed data from github\n",
+    "\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/plb2018/data620/master/Week10/spam_n_ham.csv',sep='|',index_col=0)\n"
    ]
   },
   {
@@ -115,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,89 +141,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>body</th>\n",
+       "      <th>source</th>\n",
+       "      <th>isSpam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>exmh workers admin redhat com thu aug nreturn ...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>steve_burt cursor system com thu aug nreturn p...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>timc ubh com thu aug nreturn path ndelivered z...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>irregulars admin thu aug nreturn path ndeliver...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>stewart smith thu aug nreturn path ndelivered ...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>martin srv ems thu aug nreturn path ndelivered...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>martin srv ems thu aug nreturn path ndelivered...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>stewart smith thu aug nreturn path ndelivered ...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>martin srv ems thu aug nreturn path ndelivered...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>exmh workers admin redhat com thu aug nreturn ...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>spamassassin talk admin lists sourceforge net ...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>spamassassin devel admin lists sourceforge net...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>spamassassin devel admin lists sourceforge net...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>ilug admin linux thu aug nreturn path ndeliver...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>exmh workers admin redhat com thu aug nreturn ...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>fork admin xent com thu aug nreturn path ndeli...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>iiu admin taint org thu aug nreturn path ndeli...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>robert chambers baesystems com thu aug nreturn...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>ilug admin linux thu aug nreturn path ndeliver...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>robert chambers baesystems com thu aug nreturn...</td>\n",
+       "      <td>easy_ham/</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 body     source  isSpam\n",
+       "0   exmh workers admin redhat com thu aug nreturn ...  easy_ham/       0\n",
+       "1   steve_burt cursor system com thu aug nreturn p...  easy_ham/       0\n",
+       "2   timc ubh com thu aug nreturn path ndelivered z...  easy_ham/       0\n",
+       "3   irregulars admin thu aug nreturn path ndeliver...  easy_ham/       0\n",
+       "4   stewart smith thu aug nreturn path ndelivered ...  easy_ham/       0\n",
+       "5   martin srv ems thu aug nreturn path ndelivered...  easy_ham/       0\n",
+       "6   martin srv ems thu aug nreturn path ndelivered...  easy_ham/       0\n",
+       "7   stewart smith thu aug nreturn path ndelivered ...  easy_ham/       0\n",
+       "8   martin srv ems thu aug nreturn path ndelivered...  easy_ham/       0\n",
+       "9   exmh workers admin redhat com thu aug nreturn ...  easy_ham/       0\n",
+       "10  spamassassin talk admin lists sourceforge net ...  easy_ham/       0\n",
+       "11  spamassassin devel admin lists sourceforge net...  easy_ham/       0\n",
+       "12  spamassassin devel admin lists sourceforge net...  easy_ham/       0\n",
+       "13  ilug admin linux thu aug nreturn path ndeliver...  easy_ham/       0\n",
+       "14  exmh workers admin redhat com thu aug nreturn ...  easy_ham/       0\n",
+       "15  fork admin xent com thu aug nreturn path ndeli...  easy_ham/       0\n",
+       "16  iiu admin taint org thu aug nreturn path ndeli...  easy_ham/       0\n",
+       "17  robert chambers baesystems com thu aug nreturn...  easy_ham/       0\n",
+       "18  ilug admin linux thu aug nreturn path ndeliver...  easy_ham/       0\n",
+       "19  robert chambers baesystems com thu aug nreturn...  easy_ham/       0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultinomialNB Accuracy: 0.8538150701212265\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/plb2018/data620/master/Week10/spam_n_ham.csv\",sep='|',index_col=0)"
+    "c = CountVectorizer(lowercase=True,\n",
+    "                        stop_words='english',\n",
+    "                        ngram_range = (1,1))\n",
+    "\n",
+    "counts = c.fit_transform(df['body'])\n",
+    "\n",
+    "X_train,X_test,y_train,y_test = train_test_split(counts,df['isSpam'],test_size=0.9,random_state=42)\n",
+    "\n",
+    "clf = MultinomialNB().fit(X_train, y_train)\n",
+    "\n",
+    "predicted= clf.predict(X_test)\n",
+    "\n",
+    "print(\"MultinomialNB Accuracy:\",metrics.accuracy_score(y_test, predicted))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.head(20)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "X_train,X_test,y_train,y_test = train_test_split(counts,df['isSpam'],test_size=0.9,random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultinomialNB Accuracy: 0.8538150701212265\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf = MultinomialNB().fit(X_train, y_train)\n",
+    "\n",
+    "predicted= clf.predict(X_test)\n",
+    "\n",
+    "\n",
+    "print(\"MultinomialNB Accuracy:\",metrics.accuracy_score(y_test, predicted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultinomialNB Accuracy: 0.8684491978609625\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "tts_idx = np.random.rand(df.shape[0]) < 0.75\n",
+    "tf=TfidfVectorizer()\n",
     "\n",
-    "train = df[tts_idx].sample(frac=1) \n",
-    "test = df[~tts_idx].sample(frac=1) \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.isSpam.sum() /df.shape[0]\n",
-    "train.isSpam.sum()/train.shape[0]\n",
-    "test.isSpam.sum()/test.shape[0]\n",
+    "text_tf= tf.fit_transform(df['body'])\n",
     "\n",
-    "test.head(25)"
+    "X_train, X_test, y_train, y_test = train_test_split(text_tf, df['isSpam'], test_size=0.3, random_state=123)\n",
+    "\n",
+    "clf = MultinomialNB().fit(X_train, y_train)\n",
+    "predicted= clf.predict(X_test)\n",
+    "print(\"MultinomialNB Accuracy:\",metrics.accuracy_score(y_test, predicted))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#spam = ' '.join(list(df[df['isSpam'] == 1]['body']))\n",
-    "#spam_wc = WordCloud(width = 512, height=512).generate(spam)\n",
-    "#plt.figure(figsize = (10,8), facecolor = 'w')\n",
-    "#plt.imshow(spam_wc)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spam_finder_tfidf = SpamClassifier(train,'tf-idf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
