--- a/Week10/classification_team1.ipynb
+++ b/Week10/classification_team1.ipynb
@@ -1026,7 +1026,6 @@
     "\n",
     "tfidf =  bag_of_words.fit_transform(df['content'])\n",
     "\n",
-    "\n",
     "online_troll_model_KNN = KNeighborsClassifier().fit(X_train,y_train)\n",
     "predicted= online_troll_model_KNN.predict(X_test)\n",
     "print(\"KNN Accuracy:\",metrics.accuracy_score(y_test, predicted))"
@@ -1127,6 +1126,89 @@
    "metadata": {},
    "source": [
     "Not surprisingly, the Gradient Boost model is yet another underperformer.  At this point, a baysian thinker would probably conclude that the naive bayes approach is an effective approach for this problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.77 (+/- 0.01) [Naive Bayes]\n",
+      "Accuracy: 0.83 (+/- 0.01) [Random Forests]\n",
+      "Accuracy: 0.70 (+/- 0.01) [KNN]\n",
+      "Accuracy: 0.61 (+/- 0.00) [SVM]\n",
+      "Accuracy: 0.70 (+/- 0.01) [AdaBoost]\n",
+      "Accuracy: 0.71 (+/- 0.01) [GradientBoost]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Paul\\Anaconda2\\envs\\tsp3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n",
+      "C:\\Users\\Paul\\Anaconda2\\envs\\tsp3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n",
+      "C:\\Users\\Paul\\Anaconda2\\envs\\tsp3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n",
+      "C:\\Users\\Paul\\Anaconda2\\envs\\tsp3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n",
+      "C:\\Users\\Paul\\Anaconda2\\envs\\tsp3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n",
+      "C:\\Users\\Paul\\Anaconda2\\envs\\tsp3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n",
+      "C:\\Users\\Paul\\Anaconda2\\envs\\tsp3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n",
+      "C:\\Users\\Paul\\Anaconda2\\envs\\tsp3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n",
+      "C:\\Users\\Paul\\Anaconda2\\envs\\tsp3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.73 (+/- 0.01) [Ensemble]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Paul\\Anaconda2\\envs\\tsp3\\lib\\site-packages\\sklearn\\preprocessing\\label.py:151: DeprecationWarning: The truth value of an empty array is ambiguous. Returning False, but in future this will result in an error. Use `array.size > 0` to check that an array is not empty.\n",
+      "  if diff:\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "\n",
+    "NB = MultinomialNB()\n",
+    "RF = RandomForestClassifier()\n",
+    "KNN = KNeighborsClassifier()\n",
+    "SVM = SVC()\n",
+    "ADA = AdaBoostClassifier()\n",
+    "GBC = GradientBoostingClassifier()\n",
+    "\n",
+    "clf = [NB,RF,KNN,SVM,ADA,GBC]\n",
+    "\n",
+    "eclf = VotingClassifier(estimators=[('Naive Bayes', NB),\n",
+    "                                    ('Random Forests', RF),\n",
+    "                                    ('KNN', KNN),\n",
+    "                                    ('SVM', SVM),\n",
+    "                                    ('AdaBoost', ADA),\n",
+    "                                    ('GradientBoost', GBC)], voting='hard')\n",
+    "\n",
+    "\n",
+    "for clf, label in zip([NB,RF,KNN,SVM,ADA,GBC,eclf], ['Naive Bayes', 'Random Forests','KNN','SVM','AdaBoost','GradientBoost', 'Ensemble']):\n",
+    "    scores = cross_val_score(clf, X_train, y_train, cv=10, scoring='accuracy')\n",
+    "    print(\"Accuracy: %0.2f (+/- %0.2f) [%s]\" % (scores.mean(), scores.std(), label))\n"
    ]
   }
  ],
