--- a/Week10/classification_team1.ipynb
+++ b/Week10/classification_team1.ipynb
@@ -8,7 +8,7 @@
     "##### Data 620, \n",
     "###### Team 1: Jason Givens-Doyle, Mehdi Khan, Paul Britton\n",
     "\n",
-    "Video link:\n"
+    "Video link: https://youtu.be/Z_9_WaXEx34\n"
    ]
   },
   {
